--- a/index.html
+++ b/index.html
@@ -767,15 +767,15 @@
                   <li><label for="pp">pp</label><input name="pp" /></li>
                 </ul>
               </div>
-              <textarea placeholder="Equipment list here"></textarea>
+              <textarea name="equipment" placeholder="Equipment list here"></textarea>
             </div>
           </section>
         </section>
         <section>
           <section class="flavor">
             <div class="personality">
-              <label for="personality">Personality</label
-              ><textarea name="personality"></textarea>
+              <label for="personality">Personality</label>
+              <textarea name="personality"></textarea>
             </div>
             <div class="ideals">
               <label for="ideals">Ideals</label
@@ -790,8 +790,8 @@
           </section>
           <section class="features">
             <div>
-              <label for="features">Features & Traits</label
-              ><textarea name="features"></textarea>
+              <label for="features">Features & Traits</label>
+              <textarea name="features"></textarea>
             </div>
           </section>
         </section>
