--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
                   </tr>
                 </tbody>
               </table>
-              <textarea></textarea>
+              <textarea name="attacksandspellcastingextra"></textarea>
             </div>
           </section>
           <section class="equipment">
