--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class="data">
           <ul>
             <li>
-              <input type="file" class="loaddata" style="display: none;" accept=".json"></input>
+              <input type="file" class="loaddata" style="display: none;" accept=".json,.txt"></input>
               <button type="button" onclick="getLoadedData()">Load</button>
             </li>
             <li>
@@ -188,7 +188,7 @@
                 <div class="label-container">
                   <label for="inspiration">Inspiration</label>
                 </div>
-                <input name="inspiration" type="checkbox" />
+                <input name="inspiration" type="checkbox" class="inspiration"/>
               </div>
               <div class="proficiencybonus box">
                 <div class="label-container">
@@ -767,7 +767,7 @@
                   <li><label for="pp">pp</label><input name="pp" /></li>
                 </ul>
               </div>
-              <textarea name="equipment" placeholder="Equipment list here"></textarea>
+              <textarea name="equipment" placeholder="Equipped & Other"></textarea>
             </div>
           </section>
         </section>
