--- a/index.html
+++ b/index.html
@@ -1805,6 +1805,72 @@
       </main>
     </div>
     <hr>
+    <div class="extraspage">
+      <header>
+        <section class="charname">
+          <label for="charname">Character Name</label>
+          <input name="charname" placeholder="Gandalf the Gray" />
+        </section>
+        <section class="misc">
+          <ul>
+            <li>
+              <label for="age">Age</label>
+              <input
+                name="age"
+                placeholder="60"
+                class="age"
+              />
+            </li>
+            <li>
+              <label for="height">Height</label>
+              <input name="height" placeholder="6'" />
+            </li>
+            <li>
+              <label for="weight">Weight</label>
+              <input name="weight" placeholder="140" />
+            </li>
+            <li>
+              <label for="eyes">Eyes</label>
+              <input name="eyes" placeholder="Blue" />
+            </li>
+            <li>
+              <label for="skin">Skin</label
+              ><input name="skin" placeholder="White" />
+            </li>
+            <li>
+              <label for="hair">Hair</label
+              ><input name="hair" placeholder="Gray" />
+            </li>
+          </ul>
+        </section>
+      </header>
+      <main>
+        <div class="left">
+          <section class="characterappearance">
+            <textarea name="characterappearance"></textarea>
+            <label for="characterappearance">Character Appearance</label>
+          </section>
+          <section class="characterbackstory">
+            <textarea name="characterbackstory"></textarea>
+            <label for="characterbackstory">Character Backstory</label>
+          </section>
+        </div>
+        <div class="right">
+          <section class="alliesandorganizations">
+            <textarea name="alliesandorganizations"></textarea>
+            <label for="alliesandorganizations">Allies & Organizations</label>
+          </section>
+          <section class="additionalfeaturesandtraits">
+            <textarea name="additionalfeaturesandtraits"></textarea>
+            <label for="additionalfeaturesandtraits">Additional Features & Traits</label>
+          </section>
+          <section class="treasure">
+            <textarea name="treasure"></textarea>
+            <label for="treasure">Treasure</label>
+          </section>
+        </div>
+      </main>
+    </div>
     </form>
   </body>
 </html>
