--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
          </section>
       </header>
       <main>
-        <div>
+        <div class="left">
           <div>
             <section class="spellheader">
               <section class="spelllevel0">
@@ -1115,7 +1115,7 @@
             </section>
           </div>
         </div>
-        <div>
+        <div class="middle">
           <div>
             <section class="spellheader">
               <section class="spelllevel">
@@ -1460,7 +1460,7 @@
             </section>
           </div>
         </div>
-        <div>
+        <div class="right">
           <div>
             <section class="spellheader">
               <section class="spelllevel">
