--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
             <div class="armorclass">
               <div>
                 <label for="ac">Armor Class</label>
-                <input name="ac" placeholder="10" type="text" />
+                <input name="ac" placeholder="10" type="text" class="armorclass"/>
               </div>
             </div>
             <div class="initiative">
@@ -618,8 +618,8 @@
             </div>
             <div class="speed">
               <div>
-                <label for="speed">Speed</label
-                ><input name="speed" placeholder="30" type="text" />
+                <label for="speed">Speed</label>
+                <input name="speed" placeholder="30" type="text" class="speed"/>
               </div>
             </div>
             <div class="hp">
@@ -642,7 +642,7 @@
               <div>
                 <div class="total">
                   <label onclick="totalhd_clicked()" for="totalhd">Total</label
-                  ><input name="totalhd" placeholder="2d10" type="text" />
+                  ><input name="totalhd" placeholder="2d6" type="text" />
                 </div>
                 <div class="remaining">
                   <label for="remaininghd">Hit Dice</label
@@ -768,7 +768,7 @@
                   <li><label for="pp">pp</label><input name="pp" /></li>
                 </ul>
               </div>
-              <textarea name="equipment" placeholder="Equipped & Other"></textarea>
+              <textarea name="equipment" placeholder="Equipped & Frequently used items"></textarea>
             </div>
           </section>
         </section>
