--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
       </header>
       <main>
         <div class="left">
-          <div>
+          <div class="level0">
             <section class="spellheader">
               <section class="spelllevel0">
                 <label for="spelllevel0">0</label>
@@ -864,7 +864,7 @@
               </ul>
             </section>
           </div>
-          <div>
+          <div class="level1">
             <section class="spellheader">
               <section class="spelllevel">
                 <label for="spelllevel1">1</label>
@@ -989,7 +989,7 @@
               </ul>
             </section>
           </div>
-          <div>
+          <div class="level2">
             <section class="spellheader">
               <section class="spelllevel">
                 <label for="spelllevel2">2</label>
@@ -1116,19 +1116,19 @@
           </div>
         </div>
         <div class="middle">
-          <div>
+          <div class="level3">
             <section class="spellheader">
               <section class="spelllevel">
-                <label for="spelllevel1">3</label>
+                <label for="spelllevel3">3</label>
               </section>
               <section class="spelllabel">
                 <div class="slotstotal">
-                  <input name="totalslots1" placeholder="0" />
-                  <label for="totalslots1label">Total Slots</label>
+                  <input name="totalslots3" placeholder="0" />
+                  <label for="totalslots3label">Total Slots</label>
                 </div>
                 <div class="slotsavailable">
-                  <input name="availableslots1" placeholder="0" />
-                  <label for="availableslots1label">Available Slots</label>
+                  <input name="availableslots3" placeholder="0" />
+                  <label for="availableslots3label">Available Slots</label>
                 </div>
               </section>
             </section>
@@ -1241,19 +1241,19 @@
               </ul>
             </section>
           </div>
-          <div>
+          <div class="level4">
             <section class="spellheader">
               <section class="spelllevel">
-                <label for="spelllevel2">4</label>
+                <label for="spelllevel4">4</label>
               </section>
               <section class="spelllabel">
                 <div class="slotstotal">
-                  <input name="totalslots2" placeholder="0" />
-                  <label for="totalslots2label">Total Slots</label>
+                  <input name="totalslots4" placeholder="0" />
+                  <label for="totalslots4label">Total Slots</label>
                 </div>
                 <div class="slotsavailable">
-                  <input name="availableslots2" placeholder="0" />
-                  <label for="availableslots2label">Available Slots</label>
+                  <input name="availableslots4" placeholder="0" />
+                  <label for="availableslots4label">Available Slots</label>
                 </div>
               </section>
             </section>
@@ -1366,19 +1366,19 @@
               </ul>
             </section>
           </div>
-          <div>
+          <div class="level5">
             <section class="spellheader">
               <section class="spelllevel">
-                <label for="spelllevel2">5</label>
+                <label for="spelllevel5">5</label>
               </section>
               <section class="spelllabel">
                 <div class="slotstotal">
-                  <input name="totalslots2" placeholder="0" />
-                  <label for="totalslots2label">Total Slots</label>
+                  <input name="totalslots5" placeholder="0" />
+                  <label for="totalslots5label">Total Slots</label>
                 </div>
                 <div class="slotsavailable">
-                  <input name="availableslots2" placeholder="0" />
-                  <label for="availableslots2label">Available Slots</label>
+                  <input name="availableslots5" placeholder="0" />
+                  <label for="availableslots5label">Available Slots</label>
                 </div>
               </section>
             </section>
@@ -1461,19 +1461,19 @@
           </div>
         </div>
         <div class="right">
-          <div>
+          <div class="level6">
             <section class="spellheader">
               <section class="spelllevel">
-                <label for="spelllevel1">6</label>
+                <label for="spelllevel6">6</label>
               </section>
               <section class="spelllabel">
                 <div class="slotstotal">
-                  <input name="totalslots1" placeholder="0" />
-                  <label for="totalslots1label">Total Slots</label>
+                  <input name="totalslots6" placeholder="0" />
+                  <label for="totalslots6label">Total Slots</label>
                 </div>
                 <div class="slotsavailable">
-                  <input name="availableslots1" placeholder="0" />
-                  <label for="availableslots1label">Available Slots</label>
+                  <input name="availableslots6" placeholder="0" />
+                  <label for="availableslots6label">Available Slots</label>
                 </div>
               </section>
             </section>
@@ -1554,19 +1554,19 @@
               </ul>
             </section>
           </div>
-          <div>
+          <div class="level7">
             <section class="spellheader">
               <section class="spelllevel">
-                <label for="spelllevel2">7</label>
+                <label for="spelllevel7">7</label>
               </section>
               <section class="spelllabel">
                 <div class="slotstotal">
-                  <input name="totalslots2" placeholder="0" />
-                  <label for="totalslots2label">Total Slots</label>
+                  <input name="totalslots7" placeholder="0" />
+                  <label for="totalslots7label">Total Slots</label>
                 </div>
                 <div class="slotsavailable">
-                  <input name="availableslots2" placeholder="0" />
-                  <label for="availableslots2label">Available Slots</label>
+                  <input name="availableslots7" placeholder="0" />
+                  <label for="availableslots7label">Available Slots</label>
                 </div>
               </section>
             </section>
@@ -1647,19 +1647,19 @@
               </ul>
             </section>
           </div>
-          <div>
+          <div class="level8">
             <section class="spellheader">
               <section class="spelllevel">
-                <label for="spelllevel1">8</label>
+                <label for="spelllevel8">8</label>
               </section>
               <section class="spelllabel">
                 <div class="slotstotal">
-                  <input name="totalslots1" placeholder="0" />
-                  <label for="totalslots1label">Total Slots</label>
+                  <input name="totalslots8" placeholder="0" />
+                  <label for="totalslots8label">Total Slots</label>
                 </div>
                 <div class="slotsavailable">
-                  <input name="availableslots1" placeholder="0" />
-                  <label for="availableslots1label">Available Slots</label>
+                  <input name="availableslots8" placeholder="0" />
+                  <label for="availableslots8label">Available Slots</label>
                 </div>
               </section>
             </section>
@@ -1724,19 +1724,19 @@
               </ul>
             </section>
           </div>
-          <div>
+          <div class="level9">
             <section class="spellheader">
               <section class="spelllevel">
-                <label for="spelllevel2">9</label>
+                <label for="spelllevel9">9</label>
               </section>
               <section class="spelllabel">
                 <div class="slotstotal">
-                  <input name="totalslots2" placeholder="0" />
-                  <label for="totalslots2label">Total Slots</label>
+                  <input name="totalslots9" placeholder="0" />
+                  <label for="totalslots9label">Total Slots</label>
                 </div>
                 <div class="slotsavailable">
-                  <input name="availableslots2" placeholder="0" />
-                  <label for="availableslots2label">Available Slots</label>
+                  <input name="availableslots9" placeholder="0" />
+                  <label for="availableslots9label">Available Slots</label>
                 </div>
               </section>
             </section>
