--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <header>
         <section class="charname">
           <label for="charname">Character Name</label>
-          <input name="charname" placeholder="Gandalf the Gray" />
+          <input name="charname" placeholder="Aragorn II Elessar" />
         </section>
         <section class="misc">
           <ul>
@@ -31,14 +31,14 @@
               <label for="classlevel">Class & Level</label>
               <input
                 name="classlevel"
-                placeholder="Wizard 2"
+                placeholder="Ranger 2;Fighter 3"
                 onfocusout="level2ProfBonus()"
                 class="classlevel"
               />
             </li>
             <li>
               <label for="background">Background</label>
-              <input name="background" placeholder="Acolyte" />
+              <input name="background" placeholder="Knight" />
             </li>
             <li>
               <label for="playername">Player Name</label>
@@ -46,11 +46,11 @@
             </li>
             <li>
               <label for="race">Race</label>
-              <input name="race" placeholder="Human" />
+              <input name="race" placeholder="Half-Elf" />
             </li>
             <li>
               <label for="alignment">Alignment</label
-              ><input name="alignment" placeholder="Lawful Good" />
+              ><input name="alignment" placeholder="Neutral Good" />
             </li>
             <li>
               <label for="experiencepoints">Experience Points</label
@@ -197,7 +197,7 @@
                 </div>
                 <input
                   name="proficiencybonus"
-                  placeholder="+2"
+                  placeholder="+3"
                   class="profbonus"
                 />
               </div>
