--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <label for="classlevel">Class & Level</label>
               <input
                 name="classlevel"
-                placeholder="Ranger 2;Fighter 3"
+                placeholder="Ranger 2/Fighter 3"
                 onfocusout="level2ProfBonus()"
                 class="classlevel"
               />
