--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./profButton/style.css" />
+    <script src="./version.js"></script>
     <script src="./autoMath.js"></script>
     <script src="./jsonTransfer.js"></script>
     <script src="./profButton/script.js"></script>
