--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./profButton/style.css" />
-    <script src="./version.js"></script>
-    <script src="./autoMath.js"></script>
-    <script src="./jsonTransfer.js"></script>
     <script src="./profButton/script.js"></script>
+    <script src="./version.js"></script>
+    <script src="./jsonTransfer.js"></script>
+    <script src="./autoMath.js"></script>
   </head>
-  <body>
+  <body onload="loadOptions()">
     <form class="charsheet" id="charsheet" onsubmit="return false">
       <div class="frontpage">
       <header>
@@ -312,8 +312,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(0)">
-                      <div name="Acrobatics-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(0)">
+                      <div name="Acrobatics-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -326,8 +328,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(1)">
-                      <div name="Animal Handling-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(1)">
+                      <div name="Animal Handling-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -340,8 +344,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(2)">
-                      <div name="Arcana-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(2)">
+                      <div name="Arcana-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -354,8 +360,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(3)">
-                      <div name="Athletics-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(3)">
+                      <div name="Athletics-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -367,8 +375,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(4)">
-                      <div name="Deception-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(4)">
+                      <div name="Deception-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -380,8 +390,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(5)">
-                      <div name="History-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(5)">
+                      <div name="History-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -393,8 +405,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(6)">
-                      <div name="Insight-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(6)">
+                      <div name="Insight-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -406,8 +420,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(7)">
-                      <div name="Intimidation-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(7)">
+                      <div name="Intimidation-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -419,8 +435,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(8)">
-                      <div name="Investigation-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(8)">
+                      <div name="Investigation-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -432,8 +450,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(9)">
-                      <div name="Medicine-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(9)">
+                      <div name="Medicine-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -445,8 +465,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(10)">
-                      <div name="Nature-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(10)">
+                      <div name="Nature-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -458,8 +480,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(11)">
-                      <div name="Perception-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(11)">
+                      <div name="Perception-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -471,8 +495,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(12)">
-                      <div name="Performance-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(12)">
+                      <div name="Performance-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -484,8 +510,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(13)">
-                      <div name="Persuasion-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(13)">
+                      <div name="Persuasion-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -497,8 +525,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(14)">
-                      <div name="Religion-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(14)">
+                      <div name="Religion-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -511,8 +541,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(15)">
-                      <div name="Sleight of Hand-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(15)">
+                      <div name="Sleight of Hand-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -524,8 +556,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(16)">
-                      <div name="Stealth-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(16)">
+                      <div name="Stealth-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                   <li>
@@ -537,8 +571,10 @@
                       type="text"
                       class="skill"
                     />
-                    <div class="skillprofbox" onclick="updateProfBox(17)">
-                      <div name="Survival-skillprof" class="state0"></div>
+                    <div class="skillprofbox" onclick="updateSkillProfBox(17)">
+                      <div name="Survival-skillprof" class="state0">
+                        <p>E</p>
+                      </div>
                     </div>
                   </li>
                 </ul>
@@ -577,6 +613,7 @@
                   placeholder="+0"
                   type="text"
                   class="initiativevalue"
+                  onchange="alert('Unless EXPLICITLY stated elsewhere, initiative is simply your Dex modifier.')"
                 />
               </div>
             </div>
