--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
       href="https://img.icons8.com/color/452/dungeons-and-dragons.png"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./profButton/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/light.css" />
+    <link rel="stylesheet" href="./style/dark.css" />
+    <link rel="stylesheet" href="./profButton/style/style.css" />
+    <link rel="stylesheet" href="./profButton/style/light.css" />
+    <link rel="stylesheet" href="./profButton/style/dark.css" />
     <script src="./profButton/script.js"></script>
     <script src="./version.js"></script>
     <script src="./jsonTransfer.js"></script>
